CPlusPlus: Allow empty argument list in member initialization

Fixes: QTCREATORBUG-30797
Change-Id: I6de0f05e071a5e73317d7a8e3d035e23e23a41aa
Reviewed-by: Christian Stenger <christian.stenger@qt.io>